--- a/Assignment2/src/ui/AddHospitalAdminJPanel.form
+++ b/Assignment2/src/ui/AddHospitalAdminJPanel.form
@@ -16,6 +16,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,88,0,0,3,-24"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
@@ -43,19 +44,23 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="lblTitle" min="-2" pref="293" max="-2" attributes="0"/>
-                              <Group type="102" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="lblHospitalName" linkSize="2" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblGender" linkSize="2" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblCity" linkSize="2" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblName" linkSize="2" alignment="1" min="-2" pref="114" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                                          <Component id="lblHospitalName" linkSize="2" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblGender" linkSize="2" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblCity" linkSize="2" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblName" linkSize="2" alignment="1" min="-2" pref="114" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="61" pref="61" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="txtPatientcity" alignment="0" max="32767" attributes="0"/>
                                       <Component id="comboGender" pref="160" max="32767" attributes="0"/>
                                       <Component id="txtName" max="32767" attributes="0"/>
                                       <Component id="txtHospitalName" max="32767" attributes="0"/>
+                                      <Component id="comboBoxCommunity" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -95,12 +100,17 @@
                       <Component id="lblHospitalName" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtHospitalName" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="comboBoxCommunity" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblCity" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtPatientcity" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   <Component id="btnSave" min="-2" pref="38" max="-2" attributes="0"/>
                   <EmptySpace pref="187" max="32767" attributes="0"/>
               </Group>
@@ -207,6 +217,29 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="txtPatientcity">
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Academy Engraved LET" size="14" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Community"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="comboBoxCommunity">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="4">
+                <StringItem index="0" value="Item 1"/>
+                <StringItem index="1" value="Item 2"/>
+                <StringItem index="2" value="Item 3"/>
+                <StringItem index="3" value="Item 4"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
